[package]
name = "hyperswarm"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Rust implementation of Hyperswarm — P2P DHT discovery with NAT holepunching"
repository = "https://github.com/plures/hyperswarm"

[dependencies]
tokio = { version = "1", features = ["full"] }
snow = "0.9"                    # Noise protocol
blake2 = "0.10"                 # Hashing (topic derivation)
ed25519-dalek = "2"             # Key pairs
quinn = "0.11"                  # QUIC transport (alternative to raw UDP)
rand = "0.8"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
